src/test/data/c/fail/assign_func.c.err
data/c/fail/assign_func.c:7:7-8: error: '=' on function-typed lvalue of type 'void (void)'
 7 |   g = 0;
   |       ^
